docs(readme): add bilingual README with screenshots
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>